--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
-MONGODB_URI=mongodb://mongo:27017/mongo
+MONGODB_URI=mongodb://mongo:27017/fiap
 MERCADO_PAGO_API=https://api.mercadopago.com
 MERCADO_PAGO_CLIENT_SECRET='IyaI124z9fuUZUPAjslnGvdo0S4IVF3t'
 MERCADO_PAGO_CLIENT_ID='1824214370596611'
 MERCADO_PAGO_QR_CODE_API=https://api.mercadopago.com/instore/orders/qr/seller/collectors
 MERCADO_PAGO_WEBHOOK=https://3ffa-2804-1b3-aa81-884c-85c0-6bcf-3b91-cd55.ngrok-free.app
+
+MYSQL_HOST=mysql
+MYSQL_USER=food
+MYSQL_PASSWORD=food2025
+MYSQL_DATABASE=fast_food
