--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-    api:
+    order-service:
         build:
             context: .
             dockerfile: Dockerfile
@@ -10,11 +10,6 @@ services:
         environment:
             # Aqui, certifique-se de que esta variável usa o nome do container Mongo do outro projeto
             MONGODB_URI: mongodb://shared-postgres:27017/shared_db
-            MERCADO_PAGO_API: ${MERCADO_PAGO_API}
-            MERCADO_PAGO_CLIENT_SECRET: ${MERCADO_PAGO_CLIENT_SECRET}
-            MERCADO_PAGO_CLIENT_ID: ${MERCADO_PAGO_CLIENT_ID}
-            MERCADO_PAGO_QR_CODE_API: ${MERCADO_PAGO_QR_CODE_API}
-            MERCADO_PAGO_WEBHOOK: ${MERCADO_PAGO_WEBHOOK}
             MYSQL_HOST: mysql
             MYSQL_USER: root
             MYSQL_PASSWORD: food2025
@@ -26,6 +21,17 @@ services:
         networks:
             - shared-mysql
             - shared-net
+            - fast-food-network
+
+    mongo:
+        image: mongo:latest
+        command:
+            - '--logpath'
+            - '/var/log/mongodb/mongod.log'
+        volumes:
+            - mongo_data:/data/db
+        networks:
+            - fast-food-network
 
     mysql:
         image: mysql:latest
@@ -39,6 +45,7 @@ services:
             - mysql_data:/var/lib/mysql
         networks:
             - shared-mysql
+            - fast-food-network
 
 volumes:
     mysql_data:
@@ -47,3 +54,4 @@ networks:
     shared-net:
         external: true
     shared-mysql:
+    fast-food-network:
