--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: fast-food-config
+    name: fast-food-order-config
 data:
     APP_ENV: 'production'
     LOG_LEVEL: 'info'
