--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: fast-food-service
+    name: order-service
 spec:
     selector:
-        app: fast-food
+        app: fast-food-order
     ports:
         - protocol: TCP
           port: 3001
           targetPort: 3001
-    type: LoadBalancer
+          nodePort: 32001
+    type: NodePort
