--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -23,7 +23,7 @@ spec:
                       - name: MYSQL_HOST
                         value: mysql
                       - name: MYSQL_PORT
-                        value: "3306"
+                        value: '3306'
                       - name: MYSQL_USER
                         valueFrom:
                             secretKeyRef:
