--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
     order-service:
         build:
@@ -49,6 +47,7 @@ services:
 
 volumes:
     mysql_data:
+    mongo_data:
 
 networks:
     shared-net:
