--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "qrcode": "^1.5.4",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "uuid": "^11.1.0"
     }
 }
